force-app/main/default/objects/Region_Threshold__mdt/Region_Threshold__mdt.object-meta.xml
<CustomObject>
    <label>Region Threshold</label>
    <pluralLabel>Region Thresholds</pluralLabel>
</CustomObject>