force-app/main/default/objects/Region_Threshold__mdt/fields/Max_Rank__c.field-meta.xml
<CustomField>
    <fullName>Max_Rank__c</fullName>
    <label>Max Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>