force-app/main/default/objects/Region_Threshold__mdt/fields/Min_Sales_Value__c.field-meta.xml
<CustomField>
    <fullName>Min_Sales_Value__c</fullName>
    <label>Min Sales Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>