force-app/main/default/objects/Region_Threshold__mdt/fields/Reward_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Reward_Percentage__c</fullName>
    <label>Reward Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>